backend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versus-backend
  labels:
    app: versus-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: versus-backend
  template:
    metadata:
      labels:
        app: versus-backend
    spec:
      serviceAccountName: backend-deployment-sa
      # volumes:
      #   - name: secrets-store-inline
      #     csi:
      #       driver: secrets-store.csi.k8s.io
      #       readOnly: true
      #       volumeAttributes:
      #         secretProviderClass: "versus-backend-deployment-aws-secrets"
      containers:
        - name: versus-backend
          image: 036692858685.dkr.ecr.us-east-1.amazonaws.com/versus-backend:IMAGE_VERSION
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          # volumeMounts:
          #   - name: secrets-store-inline
          #     mountPath: "/mnt/secrets-store"
          #     readOnly: true
        
---
apiVersion: v1
kind: Service
metadata:
  name: versus-backend-svc
spec:
  selector:
    app: versus-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
