backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versus-backend-ingress
  annotations:  # use the shared ingress-nginx
   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: versus-STAGE-api-22acentos.exchangeweb.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: versus-backend-svc
            port:
              number: 80
